kubernetes/external/truenas/endpoint.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: truenas
  namespace: external
  labels:
    kubernetes.io/service-name: truenas
addressType: IPv4
ports:
  - name: http
    appProtocol: http
    protocol: TCP
    port: 80
endpoints:
  - addresses:
      - "10.10.2.2"
