kubernetes/external/truenas/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: truenas
  namespace: external
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
